# covscript-runtime

./: .gitignore  CMakeLists.txt  README.md
include/covscript/impl/: min_impl.hpp
tests/: demo.min.csc
